2011-03-14 Flamewing <flamewing.sonic@gmail.com>
	* src/lib/enigma.cc: Fixed decompressor -- it wasn't properly decoding some
	  files -- and improved compressor -- now features better compression than
	  the KENS original.

2011-03-12 Flamewing <flamewing.sonic@gmail.com>
	* src/lib/nemesis.*: Fixed decompression bug which did not take the code
	  length into consideration when decoding.

2011-02-28 Flamewing <flamewing.sonic@gmail.com>
	* src/lib/nemesis.cc: Package-merge version of Nemesis encoder for optimal
	  encoded file size.

2011-02-10 Flamewing <flamewing.sonic@gmail.com>
	* src/main.cc, src/sseditor.cc: Disabling 'DEBUG'.
	* src/Makefile.am: Fixed install of images in *nix.
	* sseditor.cc: Drawing improvements. Ctrl key can be used in insertion mode
	  to constrain the position of the new bomb or ring. Properly set scrollbar
	  limits so that last segment ends at the end of the scrollable area.

2011-02-09 Flamewing <flamewing.sonic@gmail.com>
	* Special Stage editor fully works in Linux.
	* Special Stage editor fully works in Windows.

2011-02-03 Flamewing <flamewing.sonic@gmail.com>
	* Initial commit.
