@@ -1,3 +1,6 @@
+2011-04-15 Flamewing <flamewing.sonic@gmail.com>
+	* src/lib/*: Fixed compression bug in Kosinski compressor.
+
 2011-03-14 Flamewing <flamewing.sonic@gmail.com>
 	* src/lib/enigma.cc: Fixed decompressor -- it wasn't properly decoding some
 	  files -- and improved compressor -- now features better compression than
